making order changes

--- a/orders.html
+++ b/orders.html
@@ -8,7 +8,8 @@
   <body>
     <p><a href="/~askamn/index.html">< Home</a></p>
 	  <h1>Orders</h1>
-    <p>Filter:</p>
+    <a href="/~askamn/new-order.html">Create New Order</a><br>
+    <p>Find an Order:</p>
     <form>
       <label for="orderID">Order ID:</label><br>
       <input type="text" id="orderID" name="orderID"><br>
@@ -17,7 +18,6 @@
       <button>Filter</button>
     </form>
     <br />
-    <button>New Order</button>
     <p><strong>Orders</strong></p>
     <table>
       <tr>
@@ -35,7 +35,7 @@
         <td>$5</td>
         <td><a href="/~askamn/customer_account.html">3</a></td>
         <td><a href="/~askamn/coffee.html">1</a></td>
-        <td></td>
+        <td>NULL</td>
         <td>Update/Delete</td>
       </tr>
       <tr>
@@ -43,7 +43,7 @@
         <td>10-27-2021</td>
         <td>$4</td>
         <td><a href="/~askamn/customer_account.html">2</a></td>
-        <td></td>
+        <td>NULL</td>
         <td><a href="/~askamn/tea.html">1</a></td>
         <td>Update/Delete</td>
       </tr>
