making order and ea changes

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <p>Site Navigation:</p>
     <ul>
         <li><a href="/~askamn/orders.html">Orders</a></li>
-        <li><a href="/~askamn/coffee.html">Coffee</a></li>
-        <li><a href="/~askamn/tea.html">Tea</a></li>
-        <li><a href="/~askamn/customer_account.html">Customer Account</a></li>
+        <li><a href="/~askamn/coffee.html">Coffees</a></li>
+        <li><a href="/~askamn/coffee.html">Coffee Orders</a></li>
+        <li><a href="/~askamn/coffee.html">Beans</a></li>
+        <li><a href="/~askamn/coffee.html">Beans with Coffee</a></li>
+        <li><a href="/~askamn/tea.html">Teas</a></li>
+        <li><a href="/~askamn/tea-order.html">Tea Orders</a></li>
+        <li><a href="/~askamn/customer_account.html">Customer Accounts</a></li>
     </ul>
   </body>
 </html>
