--- a/new-order.html
+++ b/new-order.html
@@ -27,7 +27,7 @@
         <option value="3">3</option>
         <option value="null">NULL</option>
       </select><br>
-      <button>Create new order</button>
+      <button type="submit" formaction="/~askamn/orders.html">Create new order</button>
     </form>
   </body>
 </html>
