--- a/tea.html
+++ b/tea.html
@@ -8,8 +8,12 @@
   <body>
     <p><a href="/~askamn/index.html">< Home</a></p>
 	  <h1>Tea</h1>
-    <p>Filter:</p>
+    <a href="/~askamn/new-tea.html">New Tea</a>
+    <br>
+    <a href="/~askamn/tea-order">Tea Orders Table</a>
+    <br>
     <form>
+      <p>Find a Tea:</p>
       <label for="teaID">Tea ID:</label><br>
       <input type="text" id="teaID" name="teaID"><br>
       <label for="origin">Origin:</label><br>
@@ -24,10 +28,8 @@
       <input type="text" id="season" name="season"><br>
       <button>Filter</button>
     </form>
-    <br />
-    <button>New Tea</button>
-    <br />
-    <br />
+    <br>
+    <p>Teas:</p>
     <table>
       <tr>
         <th>Tea ID:</th>
@@ -37,7 +39,6 @@
         <th>Flavor:</th>
         <th>Season:</th>
         <th>Price:</th>
-        <th>OrderID:</th>
         <th></th>
       </tr>
       <tr>
@@ -48,18 +49,6 @@
         <td>Honey</td>
         <td>Fall</td>
         <td>$4</td>
-        <td><a href="/~askamn/orders.html">2</a></td>
-        <td>Update/Delete</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>China</td>
-        <td>Black</td>
-        <td>False</td>
-        <td>Honey</td>
-        <td>Fall</td>
-        <td>$4</td>
-        <td><a href="/~askamn/orders.html">3</a></td>
         <td>Update/Delete</td>
       </tr>
     </table>
