cleaning up order and tea pages

--- a/coffee-order.html
+++ b/coffee-order.html
@@ -2,23 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Morning Dawn - Tea Order</title>
+    <title>Morning Dawn - Coffee Order</title>
     <link rel="stylesheet" href="/~askamn/css/morning-dawn.css">
   </head>
   <body>
     <p><a href="/~askamn/index.html">< Home</a></p>
-	<h1>Tea Orders</h1>
+	<h1>Coffee Orders</h1>
     <table>
       <tr>
-        <th>Tea ID:</th>
+        <th>Coffee ID:</th>
         <th>Order ID:</th>
       </tr>
       <tr>
-        <td><a href="/~askamn/tea.html">1</a></td>
-        <td><a href="/~askamn/orders.html">2</a></td>
+        <td><a href="/~askamn/coffee.html">1</a></td>
+        <td><a href="/~askamn/orders.html">1</a></td>
       </tr>
       <tr>
-        <td><a href="/~askamn/tea.html">1</a></td>
+        <td><a href="/~askamn/coffee.html">2</a></td>
         <td><a href="/~askamn/orders.html">3</a></td>
       </tr>
     </table>
