--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="/~askamn/orders.html">Orders</a></li>
         <li><a href="/~askamn/coffee.html">Coffees</a></li>
-        <li><a href="/~askamn/coffee.html">Coffee Orders</a></li>
+        <li><a href="/~askamn/coffee-order.html">Coffee Orders</a></li>
         <li><a href="/~askamn/coffee.html">Beans</a></li>
         <li><a href="/~askamn/coffee.html">Beans with Coffee</a></li>
         <li><a href="/~askamn/tea.html">Teas</a></li>
