--- a/new-tea.html
+++ b/new-tea.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Morning Dawn - Tea</title>
+    <title>Morning Dawn - New Tea</title>
     <link rel="stylesheet" href="/~askamn/css/morning-dawn.css">
   </head>
   <body>
