--- a/orders.html
+++ b/orders.html
@@ -9,6 +9,10 @@
     <p><a href="/~askamn/index.html">< Home</a></p>
 	  <h1>Orders</h1>
     <a href="/~askamn/new-order.html">Create New Order</a><br>
+    <a href="/~askamn/coffee-order">Coffee Orders Table</a>
+    <br>
+    <a href="/~askamn/tea-order">Tea Orders Table</a>
+    <br>
     <form>
       <p>Find an Order:</p>
       <label for="orderID">Order ID:</label><br>
@@ -18,15 +22,13 @@
       <button>Filter</button>
     </form>
     <br />
-    <p><strong>Orders</strong></p>
+    <p><strong>Orders:</strong></p>
     <table>
       <tr>
         <th>Order ID:</th>
         <th>Order Date:</th>
         <th>Order Total:</th>
         <th>Customer ID:</th>
-        <th>Coffee ID:</th>
-        <th>Tea ID:</th>
         <th></th>
       </tr>
       <tr>
@@ -34,8 +36,6 @@
         <td>10-28-2021</td>
         <td>$5</td>
         <td><a href="/~askamn/customer_account.html">3</a></td>
-        <td><a href="/~askamn/coffee.html">1</a></td>
-        <td>NULL</td>
         <td>Update/Delete</td>
       </tr>
       <tr>
@@ -43,8 +43,6 @@
         <td>10-27-2021</td>
         <td>$4</td>
         <td><a href="/~askamn/customer_account.html">2</a></td>
-        <td>NULL</td>
-        <td><a href="/~askamn/tea.html">1</a></td>
         <td>Update/Delete</td>
       </tr>
       <tr>
@@ -52,8 +50,6 @@
         <td>10-27-2021</td>
         <td>$9</td>
         <td><a href="/~askamn/customer_account.html">1</a></td>
-        <td><a href="/~askamn/coffee.html">2</a></td>
-        <td><a href="/~askamn/tea.html">1</a></td>
         <td>Update/Delete</td>
       </tr>
     </table>
