--- a/new-order.html
+++ b/new-order.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Morning Dawn - Orders</title>
+    <title>Morning Dawn - New Order</title>
     <link rel="stylesheet" href="/~askamn/css/morning-dawn.css">
   </head>
   <body>
