changing bean and customer pages

--- a/customer_account.html
+++ b/customer_account.html
@@ -8,6 +8,7 @@
   <body>
     <p><a href="/~askamn/index.html">< Home</a></p>
 	  <h1>Customer Information</h1>
+    <a href="/~askamn/new-customer">Create a New Customer</a>
     <form>
       <label for="customerID">Customer ID:</label><br>
       <input type="text" id="customerID" name="customerID"><br>
@@ -20,7 +21,6 @@
       <button>Filter</button>
     </form>
     <br />
-    <button>New Customer</button>
     <p><strong>Customers</strong></p>
     <table>
       <tr>
