--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <li><a href="/~askamn/orders.html">Orders</a></li>
         <li><a href="/~askamn/coffee.html">Coffees</a></li>
         <li><a href="/~askamn/coffee-order.html">Coffee Orders</a></li>
-        <li><a href="/~askamn/coffee.html">Beans</a></li>
-        <li><a href="/~askamn/coffee.html">Beans with Coffee</a></li>
+        <li><a href="/~askamn/beans.html">Beans</a></li>
+        <li><a href="/~askamn/beans-coffee.html">Beans with Coffee</a></li>
         <li><a href="/~askamn/tea.html">Teas</a></li>
         <li><a href="/~askamn/tea-order.html">Tea Orders</a></li>
         <li><a href="/~askamn/customer_account.html">Customer Accounts</a></li>
