--- a/beans.html
+++ b/beans.html
@@ -8,8 +8,12 @@
   <body>
     <p><a href="/~askamn/index.html">< Home</a></p>
     <h1>Types of Beans</h1>
-    <p>Filter:</p>
+    <a href="/~askamn/new-bean.html">New Bean</a>
+    <br />
+    <a href="/~askamn/beans-coffee.html">Coffee Bean Table</a>
+    <br />
     <form>
+      <p>Find a Bean:</p>
       <label for="beanID">Bean ID:</label><br>
       <input type="text" id="beanID" name="beanID"><br>
       <label for="countryOfOrigin">Country of Origin:</label><br>
@@ -21,8 +25,7 @@
       <button>Filter</button>
     </form>
     <br />
-    <button>New Bean</button>
-    <br />
+    <p><strong>Beans:</strong></p>
     <table>
       <tr>
         <th>Bean ID:</th>
