adding coffee tables and cleaning up headers

--- a/beans.html
+++ b/beans.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Morning Dawn - Coffee</title>
+    <title>Morning Dawn - Beans</title>
     <link rel="stylesheet" href="/~askamn/css/morning-dawn.css">
   </head>
   <body>
