--- a/coffee.html
+++ b/coffee.html
@@ -8,7 +8,9 @@
   <body>
     <p><a href="/~askamn/index.html">< Home</a></p>
 	  <h1>Coffee</h1>
-    <h4>Types of Coffee</h4>
+    <a href="/~askamn/new-coffee.html">Make a New Coffee</a><br>
+    <a href="/~askamn/coffee-order.html">Coffee Orders</a><br>
+    <a href="/~askamn/beans-coffee.html">Coffee Beans</a><br>
     <p>Filter:</p>
     <form>
       <label for="coffeeID">Coffee ID:</label><br>
@@ -20,7 +22,6 @@
       <button>Filter</button>
     </form>
     <br />
-    <button>New Coffee</button>
     <table>
       <tr>
         <th>Coffee ID:</th>
@@ -31,8 +32,6 @@
         <th>Brew Time:</th>
         <th>Price:</th>
         <th>Special Requests:</th>
-        <th>Order ID:</th>
-        <th>Bean ID:</th>
         <th></th>
       </tr>
       <tr>
@@ -41,10 +40,9 @@
         <td>50g</td>
         <td>1L</td>
         <td>None</td>
+        <td>4 minutes</td>
         <td>$5</td>
         <td>None</td>
-        <td><a href="/~askamn/orders.html">1</a></td>
-        <td><a href="/~askamn/beans.html">1</a></td>
         <td>Update/Delete</td>
       </tr>
       <tr>
@@ -53,10 +51,9 @@
         <td>20g</td>
         <td>1L</td>
         <td>Milk, Vanilla</td>
+        <td>3 minutes</td>
         <td>$5</td>
         <td>Light Ice</td>
-        <td><a href="/~askamn/orders.html">3</a></td>
-        <td>1</td>
         <td>Update/Delete</td>
       </tr>
     </table>
