--- a/new-bean.html
+++ b/new-bean.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Morning Dawn - Coffee</title>
+    <title>Morning Dawn - New Bean</title>
     <link rel="stylesheet" href="/~askamn/css/morning-dawn.css">
   </head>
   <body>
@@ -22,7 +22,7 @@
         <option value="3">3</option>
         <option value="null">NULL</option>
       </select><br>
-      <button type="submit" formaction="/~askamn/beans.html">Filter</button>
+      <button type="submit" formaction="/~askamn/beans.html">Create New Bean</button>
     </form>
   </body>
 </html>
